--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+body, div, p, ul{
+    margin: 0;
+}
 /*--------------------------------------------------------------------
                         linkedin environment
 ---------------------------------------------------------------------*/
@@ -10,6 +13,9 @@ body {
 .column{
     width: 646px;
     margin: 0 auto;
+}
+p, li, ul {
+    font-size: 13px;
 }
 
 /*-----------------------------------------------------------------------
@@ -105,5 +111,10 @@ body {
     right: 0;
     top: 0;
     color: rgba(29, 33, 255, 0.96);
+}
+
+.vacancy-tile{
+    padding-bottom: 20px;
+    border-bottom: 1px solid #d4d4d1;
 }
 
