--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-body, div, p, ul{
+body, div, p, ul, h3{
     margin: 0;
 }
 /*--------------------------------------------------------------------
@@ -95,7 +95,8 @@ p, li, ul {
 .tab {
     border-top: 1px solid #d4d4d1;
     width: auto;
-    padding: 15px;
+    padding: 30px;
+    padding-top: 0;
 }
 
 .tab-content {
@@ -114,7 +115,7 @@ p, li, ul {
 }
 
 .vacancy-tile{
-    padding-bottom: 20px;
+    padding: 30px 0;
     border-bottom: 1px solid #d4d4d1;
 }
 
