--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,31 @@
-body, div, p, ul, h3{
+body, div, p, ul, h3, a, span{
     margin: 0;
+}
+/**
+ * For modern browsers
+ * 1. The space content is one way to avoid an Opera bug when the
+ *    contenteditable attribute is included anywhere else in the document.
+ *    Otherwise it causes space to appear at the top and bottom of elements
+ *    that are clearfixed.
+ * 2. The use of `table` rather than `block` is only necessary if using
+ *    `:before` to contain the top-margins of child elements.
+ */
+.cf:before,
+.cf:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+}
+
+.cf:after {
+    clear: both;
+}
+
+/**
+ * For IE 6/7 only
+ * Include this rule to trigger hasLayout and contain floats.
+ */
+.cf {
+    *zoom: 1;
 }
 /*--------------------------------------------------------------------
                         linkedin environment
@@ -14,7 +40,7 @@ body {
     width: 646px;
     margin: 0 auto;
 }
-p, li, ul {
+p, li, ul, a, span {
     font-size: 13px;
 }
 
@@ -78,13 +104,18 @@ p, li, ul {
 
 .block-logo, .tabs-menu a {
     color: #2e7da3;
-    display: inline-block;
+    display: block;
+    float: left;
     padding: 10px 15px;
     font-size: 13px;
     line-height: 17px;
     text-decoration: none;
     font-weight: bold;
     color: rgb(51, 51, 51);
+}
+.tabs-menu a:hover,
+.tabs-menu a:active{
+    background: #F7F5F5;
 }
 
 .tabs-menu a.current {
@@ -114,8 +145,82 @@ p, li, ul {
     color: rgba(29, 33, 255, 0.96);
 }
 
-.vacancy-tile{
+.vacancy, .no-info{
     padding: 30px 0;
     border-bottom: 1px solid #d4d4d1;
 }
+.vacancy article, .no-info article{
+    margin-bottom: 15px;
+}
 
+.no-info article:last-child{
+    margin-bottom: 0;
+}
+
+.vacancy-subnav {
+    margin-bottom: 15px;
+    line-height: 1.2;
+}
+
+.vacancy-subnav a {
+    padding: 0 10px;
+    border-right: 1px solid #6B6B6B;
+    text-decoration: none;
+    color: #6B6B6B;
+}
+
+.vacancy-subnav a:hover{
+    text-decoration: underline;
+}
+
+.vacancy-subnav a:first-child {
+    padding-left: 0;
+}
+
+.vacancy-subnav a:last-child {
+    padding-right: 0;
+    border-right: none;
+}
+
+.confirmed-keyword {
+    color:green;
+}
+
+.un-confirmed-keyword {
+    color:red;
+}
+
+.task-list {
+    list-style: none;
+    padding-left: 0;
+}
+
+.task-list li{
+    width: 100%;
+    float: left;
+}
+
+.task-list li:hover{
+}
+
+.task-list .button {
+}
+
+.button {
+    background: rgb(224, 224, 224);
+    border-radius: 3px;
+    border: 1px solid #B1B1B1;
+    margin: 2px;
+    padding: 3px 5px;
+    cursor: pointer;
+    text-align: center;
+    min-width: 150px;
+}
+.button-completed {
+    background-color: #7ADC4F;
+    border-color: #69B51C;
+    color: #246B0D;
+}
+.button-deactivated {
+    background-color: gary;
+}
