--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,7 @@ body, div, p, ul, h3, a, span{
 body {
     background: #e9e9e9;
     font-family: sans-serif;
+    padding-bottom:50px;
 }
 
 .column{
@@ -95,6 +96,7 @@ p, li, ul, a, span {
     box-shadow: rgba(0, 0, 0, 0.14902) 0px 1px 1px, rgba(0, 0, 0, 0.027451) -1px 0px 0px, rgba(0, 0, 0, 0.027451) 1px 0px 0px, rgba(0, 0, 0, 0.117647) 0px 1px 0px;
     line-height: 1.5;
     position: relative;
+    margin-bottom:10px;
 }
 
 #dosje-tabs-container .tabs-menu{
@@ -149,6 +151,12 @@ p, li, ul, a, span {
     padding: 30px 0;
     border-bottom: 1px solid #d4d4d1;
 }
+
+.vacancy:last-child{
+    border-bottom: none;
+    padding-bottom: 10px;
+}
+
 .vacancy article, .no-info article{
     margin-bottom: 15px;
 }
@@ -220,7 +228,4 @@ p, li, ul, a, span {
     background-color: #7ADC4F;
     border-color: #69B51C;
     color: #246B0D;
-}
-.button-deactivated {
-    background-color: gary;
 }
