--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ body, div, p, ul, h3, h4, a, span{
 body {
     background: #e9e9e9;
     font-family: sans-serif;
-    padding-bottom:50px;
+    padding:50px 0;
 }
 
 .column{
@@ -48,7 +48,7 @@ p, li, ul, a, span, time {
 /*-----------------------------------------------------------------------
                             old brust card
 ------------------------------------------------------------------------*/
-
+/*
 #brust-card {
     background: rgb(255, 255, 255);
     box-shadow: rgba(0, 0, 0, 0.14902) 0px 1px 1px, rgba(0, 0, 0, 0.027451) -1px 0px 0px, rgba(0, 0, 0, 0.027451) 1px 0px 0px, rgba(0, 0, 0, 0.117647) 0px 1px 0px;
@@ -86,6 +86,7 @@ p, li, ul, a, span, time {
     border-bottom: 1px solid rgb(232, 232, 232);
     position: relative;
 }
+*/
 
 /*-----------------------------------------------------------------------------
                         new Dosje action tabs card
@@ -102,11 +103,6 @@ p, li, ul, a, span, time {
 #dosje-tabs-container h3{
     font-size: 18px;
 }
-
-#dosje-tabs-container .tabs-menu{
-
-}
-
 
 .block-logo, .tabs-menu a {
     color: #2e7da3;
@@ -140,19 +136,23 @@ p, li, ul, a, span, time {
     display: none;
 }
 
-#tab-1 {
+#tab-2 {
     display: block;
 }
 
 .block-logo {
     position: absolute;
+    padding-right: 25px;
     right: 0;
     top: 0;
     color: rgba(29, 33, 255, 0.96);
 }
+.block-logo:hover{
+    text-decoration: underline;
+}
 
 .vacancy, .no-info{
-    padding: 30px 0;
+    padding: 25px 0;
     border-bottom: 1px solid #d4d4d1;
 }
 .vacancy article, .no-info article{
@@ -234,6 +234,12 @@ p, li, ul, a, span, time {
     width: 100%;
     float: left;
 }
+.dosje-left{
+    float: left;
+}
+.dosje-right{
+    float: right;
+}
 
 .button {
     background: rgb(224, 224, 224);
@@ -246,11 +252,70 @@ p, li, ul, a, span, time {
     min-width: 150px;
 }
 .button-completed {
-    background-color: #7ADC4F;
-    border-color: #69B51C;
-    color: #246B0D;
+      background-color: #7ADC4F;
+      border-color: #69B51C;
+      color: #246B0D;
+  }
+.button-blue {
+    background-color: #4F6DDC;
+    border-color: #3660AD;
+    color: #FFFFFF;
 }
-
+.button-blue:hover {
+    background-color: #46599E;
+    border-color: #244073;
+}
+.dosje-login-button{
+    min-width: 116px;
+    display: block;
+    padding: 6px;
+}
+/*----------------------------------------
+             login form styles
+------------------------------------------*/
+.dosje-form{
+    width: 250px;
+}
+.dosje-label{
+    display: block;
+    margin-bottom: 1px;
+}
+.dosje-input{
+    border-radius: 3px;
+    border: 1px solid #ABABAB;
+    padding: 5px;
+    width: 100%;
+    box-sizing: border-box;
+    margin-bottom: 8px;
+}
+.dosje-forgot-password{
+    text-decoration: none;
+    color: #6B6B6B;
+    float: left;
+}
+.dosje-forgot-password:hover,
+.dosje-forgot-password:active{
+    text-decoration: underline;
+}
+.dosje-error{
+    color: red;
+}
+.dosje-field-error{
+    background: #FFF2DB;
+}
+/*-----------------------------------------------
+                  comments block
+-------------------------------------------------*/
+.dosje-comments{
+    width: 100%;
+}
+.dosje-comments .dosje-input{
+    width: 250px;
+}
+.dosje-comments .dosje-comment-textfield{
+    width: 100%;
+    resize: vertical;
+ }
 time {
     display: block;
     width: 100%;
